Update project notice service
